downgrade to Java 11